<resources>
    <string name="app_name">CourseManage</string>
    <string name="login_footer_signup">还没有账号? 现在创建!</string>
    <string name="register_footer_signin">已有账号? 现在登陆!</string>
    <string name="forgetpass_signin">不用找回? 返回登陆!</string>
    <string name="login_loginin">登  录</string>
    <string name="register_signup">注  册</string>
    <string name="register_account">注册账号</string>
    <string name="forgetpass_submit">找回密码</string>
    <string name="login_forget_pass">忘记密码? 点击找回!</string>
    <string name="login_password">密码</string>
    <string name="register_sign">验证密码</string>
    <string name="login_account_hint">用户名/手机号/邮箱</string>
    <string name="forgetpass_account_hint">用户名</string>
    <string name="forgetpass_phone_hint">手机号</string>
    <string name="forgetpass_email_hint">邮箱</string>
    <string name="login_internet_no">请确认连接网络后再试!</string>
</resources>
