<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login">

    <LinearLayout
        android:id="@+id/linear0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100sp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/login_logo"/>

        <TextView
            android:textSize="15sp"
            android:layout_marginTop="20sp"
            android:layout_marginLeft="35sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="课程管理"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear0"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70sp"
        android:orientation="vertical">

        <RadioGroup
            android:layout_width="290sp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableLeft="@drawable/login_account" />

            <EditText
                android:id="@+id/login_account_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ_"
                android:gravity="center"
                android:hint="@string/login_account_hint"
                android:inputType="textEmailAddress"
                android:maxLength="20"
                android:textColor="@drawable/login_text_selector"
                android:textColorHint="@drawable/login_gray" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="5dp"
            android:background="@android:color/darker_gray" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30sp"
        android:orientation="vertical">

        <RadioGroup
            android:layout_width="290sp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableLeft="@drawable/login_pass" />

            <EditText
                android:id="@+id/login_pass_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ_"
                android:gravity="center"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:textColor="@drawable/login_text_selector"
                android:textColorHint="@drawable/login_gray" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="5dp"
            android:background="@android:color/darker_gray" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30sp">

        <Button
            android:id="@+id/login_submit_bn"
            android:layout_width="290sp"
            android:layout_height="wrap_content"
            android:background="@drawable/login_bt_selector"
            android:text="@string/login_loginin"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_linear_fogetpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear3"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/login_forgetpass_bn"
            android:layout_width="290sp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/login_forget_pass"
            android:textColor="@drawable/login_text_selector"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_linear_footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/login_signup_bn"
            android:layout_width="290sp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/login_footer_signup"
            android:textColor="@drawable/login_text_selector"
            android:textSize="14sp" />
    </LinearLayout>

</RelativeLayout>